# aes-blake

./: .devtools  .gitignore  README.md  pyproject.toml
aes_cube/: aes.py  blake.py  constants.py  sbox.py  types.py  uint.py  utils.py
c_lib/: CMakeLists.txt  cp_csprng.c  cp_csprng.h
c_lib/aes_blake/: CMakeLists.txt  csprng.c  csprng.h
c_lib/aes_block/: CMakeLists.txt  aes_block.h  aes_impl_clean.c  aes_impl_optimized.c  aes_ops.c  aes_ops.h  aes_sbox.c  aes_sbox.h  aes_shared.c  aes_shared.h  aes_tables.c  aes_tables.h  aes_types.h  aes_utils.c  aes_utils.h  clean_aes.c  clean_aes.h  ttable_aes.c  ttable_aes.h
c_lib/avx2/: CMakeLists.txt
c_lib/blake_keygen/: CMakeLists.txt  blake32.c  blake32.h  blake32_impl_clean.c  blake32_impl_optimized.c  blake64.c  blake64_impl_clean.c  blake64_impl_optimized.c  blake_const.c  blake_internals.h  blake_keygen.h  blake_shared.c  blake_shared.h  blake_types.h  clean_blake32.c  clean_blake32.h  clean_blake64.c  clean_blake64.h  opt_blake32.c  opt_blake32.h  opt_blake64.c  opt_blake64.h
c_lib/clean/: CMakeLists.txt  aes.c  aes.h  blake32.c  blake32.h  blake64.c  blake64.h
c_lib/hardened/: CMakeLists.txt  cp_csprng.h
c_lib/masking/: CMakeLists.txt  dom_ar_add.c  dom_bw_and.c  dom_bw_not.c  dom_bw_or.c  dom_bw_rot.c  dom_bw_rotr.c  dom_bw_shift.c  dom_bw_xor.c  dom_conv.c  dom_conv_atob.c  dom_conv_btoa.c  dom_conv_type.c  dom_converters.c  dom_internal_defs.h  dom_internal_undefs.h  dom_ksa.c  dom_operations.c  dom_ops_arith.c  dom_ops_bool.c  dom_types.h  dom_utils.c  masking.h
c_lib/shared/: CMakeLists.txt  aes_sbox.h  blake32.c  blake32.h  blake64.c  blake64.h  blake_keygen.c  blake_keygen.h  cp_csprng.h
c_lib/tests/: CMakeLists.txt  helpers.hpp  test_main.cpp
c_lib/tests/aes_blake/: test_csprng.cpp
c_lib/tests/aes_block/: helpers.h  test_aes.cpp  test_aes_block.cpp  test_aes_const.cpp  test_aes_utils.cpp
c_lib/tests/benchmarks/: measure_aes_block.cpp  measure_blake_keygen.cpp
c_lib/tests/blake_keygen/: helpers.h  test_blake32.cpp  test_blake64.cpp  test_blake_shared.cpp  test_clean_blake32.cpp  test_clean_blake64.cpp  test_derive_keys.cpp
c_lib/tests/clean/: test_aes.cpp  test_blake32.cpp  test_blake64.cpp
c_lib/tests/hardened/: test_cp_csprng.cpp
c_lib/tests/masking/: test_dom_ar_add.cpp  test_dom_bw_and.cpp  test_dom_bw_or.cpp  test_dom_bw_xor.cpp
c_lib/tests/perf_bench/: test_aes_block_perf.cpp  test_blake_keygen_perf.cpp
c_lib/tests/perfbench/: shared.h  test_aes_block_perf.cpp  test_blake_keygen_perf.cpp
c_lib/tests/shared/: test_aes_sbox.cpp  test_blake32.cpp  test_blake64.cpp
c_lib/tests/test_aes_block/: test_aes_block.cpp  test_aes_const.cpp
c_lib/tests/test_aes_block/helpers/: fips197_testcase.cpp  galois_field_tools.cpp  helpers.h  original_keygen.cpp  two_block_testcase.cpp
c_lib/tests/test_blake_keygen/: test_blake_derive_keys.cpp  test_blake_internals.cpp  test_blake_shared.cpp
c_lib/tests/test_blake_keygen/helpers/: blake32_derive_keys_test.cpp  blake32_internals_tests.cpp  blake64_derive_keys_test.cpp  blake64_internals_tests.cpp  helpers.h
c_lib/tests/test_masking/: test_dom_bw_and.cpp  test_dom_bw_not.cpp  test_dom_bw_or.cpp  test_dom_bw_rot.cpp  test_dom_bw_rotr.cpp  test_dom_bw_shift.cpp  test_dom_conv.cpp  test_dom_conv_btoa.cpp  test_dom_conv_type.cpp  test_dom_converters.cpp  test_dom_ksa.cpp  test_dom_operations.cpp  test_dom_ops_basic.cpp  test_dom_utils.cpp
c_lib/tests/test_tools/: test_csprng.cpp
c_lib/tests/tools/: debug.cpp  debug.h
c_lib/tests/utils/: test_cp_csprng.cpp
c_lib/tools/: CMakeLists.txt  csprng.h  debug.c  debug.h
c_lib/utils/: CMakeLists.txt  cp_csprng.h
py_lib/: pyproject.toml
py_lib/scripts/: build.py
py_ref/: pyproject.toml
py_ref/src/: aes_blake.py  aes_block.py  aes_sbox.py  blake_keygen.py  checksum.py  debug.py  exp_node.py  uint.py  utils.py
py_ref/src/aes_blake/: __init__.py  base_aes_blake.py  clean_aes_blake.py  masked_aes_blake.py  parallel_aes_blake.py
py_ref/src/aes_block/: __init__.py  base_aes.py  base_aes_block.py  subclasses.py
py_ref/src/blake_keygen/: __init__.py  base_blake.py  base_blake_keygen.py  clean_blake.py  clean_blake_keygen.py  masked_blake.py  masked_blake_keygen.py  with_derive_keys.py
py_ref/src/integers/: __init__.py  base_masked_uint.py  base_uint.py  expression_node.py  subclasses.py
py_ref/src/masked/: masked_uint.py
py_ref/tests/: conftest.py  test_aes_blake.py  test_aes_block.py  test_blake_keygen.py  test_checksum.py  test_exp_node.py  test_sbox.py  test_uint.py  test_utils.py
py_ref/tests/aes_blake/: overrides.py  test_core_methods.py  test_reference_inputs.py
py_ref/tests/aes_block/: test_example_vectors.py  test_sbox.py
py_ref/tests/blake_keygen/: test_core_methods.py  test_derive_keys.py
py_ref/tests/integers/: gcmi.py  test_expression_node.py  test_masked_uint.py  test_statistics.py  test_uint.py  utils.py
py_ref/tests/masked/: conftest.py  test_masked_uint.py  test_statistics.py
py_ref/tests/test_aes_blake/: test_aes_blake.py  test_ex_cols.py  test_init_comps.py
src/: main.py
tests/: test_blake.py  test_checksum.py  test_sbox.py  test_uint.py  test_uint_types.py
